--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/splash-screen": "^7.0.1",
     "@capacitor/status-bar": "7.0.2",
+    "@capawesome-team/capacitor-datetime-picker": "^7.0.1",
     "@ionic/cli": "^7.2.1",
     "@ionic/lab": "^3.2.15",
     "@ionic/react": "^8.5.0",
