--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor-community/date-picker": "^7.0.0",
     "@capacitor/android": "^7.4.2",
     "@capacitor/app": "7.0.2",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/device": "^7.0.1",
     "@capacitor/haptics": "7.0.2",
