--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/device": "^7.0.1",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/ios": "^7.4.2",
     "@capacitor/keyboard": "7.0.2",
@@ -39,6 +40,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "ionicons": "^7.4.0",
     "katex": "^0.16.22",
+    "llama-cpp-capacitor": "^0.0.3",
     "markdown-it": "^14.1.0",
     "markdown-it-katex": "^2.0.3",
     "react": "19.0.0",
