--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/device": "^7.0.1",
+    "@capacitor/file-transfer": "^1.0.5",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/ios": "^7.4.2",
