--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@capacitor/status-bar": "7.0.2",
     "@capawesome-team/capacitor-datetime-picker": "^7.0.1",
     "@capawesome-team/capacitor-speech-recognition": "^7.4.1",
+    "@capawesome-team/capacitor-sqlite": "^0.1.6",
     "@capawesome/capacitor-file-picker": "^7.2.0",
     "@ionic/cli": "^7.2.1",
     "@ionic/lab": "^3.2.15",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
+    "@sqlite.org/sqlite-wasm": "^3.50.0-build1",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "i18next": "^25.3.2",
