--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.6.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
@@ -62,6 +63,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/tesseract.js": "^0.0.2",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
